--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
-    <script src="/js/main.js" defer></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
     <title>Colorpicker</title>
 </head>
 <body>
